--- a/modules/distribution/locale/fr_FR.po
+++ b/modules/distribution/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -81,6 +81,10 @@ msgstr "Distribution"
 msgctxt "model:ir.ui.menu,name:menu_distribution_configuration"
 msgid "Configuration"
 msgstr "Configuration"
+
+msgctxt "model:res.group,name:group_distribution"
+msgid "Distribution Administration"
+msgstr "Administration des réseaux de distribution"
 
 msgctxt "view:distribution.network:"
 msgid "Distribution Network"
